# scrapyu

./: .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
scrapyu/: __init__.py  _mongodb.py  _redis.py  _useragent.py  cmdline.py  cookies.py  markdown.py  mongodb.py  settings.py  useragent.py  utils.py
scrapyu/templates/spiders/: single.tmpl  single_splash.tmpl
tests/: __init__.py  normal.html  test_cmdline.py  test_pipeline_markdown.py  test_pipeline_mongodb.py  test_redisdupefilter.py  test_scrapyu.py  test_useragent.py  test_utils.py
tests/test_templates/: single.py  single_splash.py
