[tool.poetry]
name = "scrapyu"
version = "0.1.10"
description = "Scrapy utils"
authors = [
    "lin-zone <z_one10@163.com>",
]
license = "MIT license"
readme = "README.md"
repository = "https://github.com/lin-zone/scrapyu"
keywords = ["scrapy", "pipelines", "middlewares", "utils", "dupefilter"]
classifiers = [
    "Framework :: Scrapy",
    "Topic :: Utilities",
    "Topic :: Internet :: WWW/HTTP",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.6"
scrapy = "^1.8"
pytest-cov = "^2.8"
fake-useragent = "0.1.11"
html2text = "2019.9.26"
path-py = "12.4.0"
selenium = "3.141.0"
pymongo = "3.10.0"
redis = "3.3.11"
testfixtures = "6.10.3"

[tool.poetry.dev-dependencies]
scrapy = "*"
pytest = "*"
pytest-cov = "*"
fake-useragent = "*"
html2text = "*"
path-py = "*"
selenium = "*"
pymongo = "*"
redis = "*"
testfixtures = "*"